add resume icon/functionality

--- a/spectral.html
+++ b/spectral.html
@@ -11,7 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-
+		<link href="css/smoothness/jquery-ui-1.9.0.custom.css" rel="stylesheet">
+		<script language="javascript" type="text/javascript" src="jquery-1.8.2.js"></script>
+		<script src="js/jquery-ui-1.9.0.custom.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
@@ -56,8 +58,9 @@
 											<div class="inner ">
 												<ul class="icons major">
 													<li><a href='https://www.linkedin.com/in/donald-vu/' target='_blank'><span class="icon major style1" ><img class='abicon' id='link' src='./images/linked_icon.png'/></span></a></li>
-													<li><a href='http://www.github.com/Donaldvu18' target='_blank'><span class="icon major styledon1"><img class='abicon2' id='link' src='./images/github.png'/></span></a></li>
-													<li><span class="icon major style1"><img class='abicon2' id='link' src='./images/linked_icon.png'/></span></li>
+													<li><a href='http://www.github.com/Donaldvu18' target='_blank'><span class="icon major"><img class='abicon2' id='link' src='./images/github.png'/></span></a></li>
+													<li><a href='./images/Donald_Vu_Resume.pdf'><span class="icon major "><img class='abicon2' id='link1' src='./images/doc-icon.png'/></span></a></li>
+											
 												</ul>
 											</div>
 										</div>
@@ -125,7 +128,7 @@
 			<div class='skillscontainer nolist mb-5 ' id='project1'>
 				<h1 class='mb-3 p-4' id='bodytitle'>Bodybuilding Website</h1>
 				<div class='row justify-content-center align-items-start'>
-					<div class='col-6 pt-5 justify-content-center align-items-center embed-responsive '>
+					<div class='col-6 pt-5 pb-3 justify-content-center align-items-center embed-responsive '>
 						<div class='row m-3 justify-content-center'>
 						<!-- <video class=''src='./images/dodgers.mp4' controls></video> -->
 						<img src='./images/bodybuilding.png' class='ml-2 img-fluid  mb-4' id='projimg2'>
@@ -159,7 +162,8 @@
 						<div class='row text-center justify-content-center'>
 							<h3 class=' col-12 mt-3 ml-5 mb-3'><U>Features</U></h3>	
 							<ul id='projlist1' class=''>
-							<li>&#8226; Can search Youtube by clicking a photo of a specific muscle</li>
+							<li>&#8226; Clicking on a photo of a specific muscle will automatically search Youtube</li>
+							<li>&#8226; User can search for food recipes by typing in a keyword</li>
 				
 						</ul>
 
@@ -226,7 +230,7 @@
 			<!-- proj3 -->
 			<div class='skillscontainer nolist mb-5' id='project1'>
 				<h1 class='mb-5 p-4' id='dodgergametitle'>Match the Dodger Game</h1>
-				<div class='row justify-content-around align-items-start'>
+				<div class='row pb-3 justify-content-around align-items-start'>
 					<div class='col-7 col-xl-5 embed-responsive '>
 						<div class='row m-3 '>
 						<!-- <video class=''src='./images/dodgers.mp4' controls></video> -->
@@ -280,7 +284,7 @@
 					</ul>
 				</div>
 			</section>
-
+		
 			
 			
 
@@ -299,7 +303,13 @@
 					</footer> -->
 
 			</div>
+			
 
+			<div>
+				<object data="test.pdf" type="application/pdf" width="300" height="200">
+					alt : <a href="./images/Donald_Vu_Resume.pdf">test.pdf</a>
+				</object>
+			</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
