change footer a bit and swapped some colors around

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							Full-Stack Developer</p><br />
 							
 							<ul class="actions special">
-								<li id='headbutton'><a href="./images/Donald_Vu_Resume.pdf" class="button" id='buttonp' >Resume</a></li>
+								<li id='headbutton'><a  href="./images/Donald_Vu_Resume.pdf" class="button" id='buttonp' target='_blank' >Resume</a></li>
 							</ul>
 						</div class='arrow'>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -292,7 +292,7 @@
 					<footer class='p-5' id="footer">
 						
 						<ul class="copyright">
-							<li>g &copy; 2019</li>
+							<li>&copy; 2019</li>
 							<li>Email: donaldvu18@gmail.com</li>
 						</ul>
 					</footer>
