--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 									<ul>
 										<li><img class='redux'src='./images/db-icon.png'/> SQL</li>
 										<li><img class='redux'src='./images/mongodb-icon.png'/> MongoDB</li>
+										<li><img class='redux'src='./images/linux-icon.png'/> Linux</li>
 										<li><img class='redux'src='./images/mysql-icon.png'/> MySQL</li>
 										<li><img class='redux'src='./images/git-icon.png'/> Git</li>
 										<li><img class='python'src='./images/aws-icon.png'/> AWS</li>
@@ -222,7 +223,7 @@
 			<div class='row text-center justify-content-center'>
 				<h3 class=' col-12 mt-3 ml-5 mb-3'><U>Features</U></h3>	
 				<ul id='projlist1' class=''>
-				<li>&#8226; Used node media server to create a web server for hosting all the streams.</li>
+				<li>&#8226; Uses node media server to create a web server for hosting all the streams.</li>
 		
 			</ul>
 
