--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 				<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -61,7 +57,7 @@
 							<div class='row justify-content-center pb-3'>
 								<div class='col-sm-6 col-xl-4'>
 									<div class='row p-1 pb-2 '>
-										<P>Don is a software engineer with a background in full-stack development.  He is set to graduate in May 2020 from Georiga Tech with a M.S in Computer Science.  Previously, Don worked for the Walt Disney Company and is now currently interning for the Los Angeles Clippers.</P>
+										<P>Don is a software engineer with a background in full-stack development.  He is set to graduate in December 2020 from Georiga Tech with a M.S in Computer Science.  Previously, Don interned for the Walt Disney Company and the Los Angeles Clippers.</P>
 									</div>
 									<div class='row p-1 justify-content-center'>
 											<div class="inner ">
